--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "src/styles.css",
+              "./node_modules/@mdi/font/css/materialdesignicons.css",
+              "./node_modules/animate.css/animate.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.js",
+              "src/scripts.js"
+            ]
           },
           "configurations": {
             "production": {
