--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 # dependencies
 /node_modules
 
+#/src/utils.config.js
+
 # profiling files
 chrome-profiler-events*.json
 speed-measure-plugin*.json
